k8s/deploy-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pass-wali-dukan-app
  labels:
    app: pass-wali-dukan-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pass-wali-dukan-app
  template:
    metadata:
      labels:
        app: pass-wali-dukan-app
    spec:
      containers:
      - name: pass-wali-dukan-app
        image: docker.io/mangesh32/pass-wali-dukan:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pass-wali-dukan-app-service
spec:
  selector:
    app: pass-wali-dukan-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
  type: LoadBalancer
